--- a/vita.tex
+++ b/vita.tex
@@ -13,7 +13,8 @@
 \vspace{5mm}
 {\normalsize Ph.D. Candidate, Electrical Engineering and Computer Science\\
 Massachusetts Institute of Technology}\\
-{\small \href{https://scholar.google.com/citations?user=RPAnJ3cAAAAJ}{\textbf{Profile on Google Scholar}}}\\
+\input{contact.tex}
+{\small \href{https://scholar.google.com/citations?user=RPAnJ3cAAAAJ}{\textbf{Link to Profile on Google Scholar}}}\\
 \vspace{5mm}
 {\small Last Updated \today}\\
 \end{center}
