Added fellowships and updated publication list

--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,86 @@
+@article{steinbrecher2018quantum,
+  title={Quantum optical neural networks},
+  author={Steinbrecher, Gregory R and Olson, Jonathan P and Englund, Dirk and Carolan, Jacques},
+  journal={arXiv preprint arXiv:1808.10047},
+  year={2018}
+}
+
+@inproceedings{steinbrecher2018hybrid,
+  title={Hybrid Flow Switched Network with an Arbitrarily Reconfigurable Optical Switch},
+  author={Steinbrecher, Gregory R and Chan, Vincent WS and Englund, Dirk R and Hamilton, Scott A},
+  booktitle={CLEO: Science and Innovations},
+  pages={SW4C--1},
+  year={2018},
+  organization={Optical Society of America}
+}
+
+@inproceedings{yegnanarayanan2018automated,
+  title={Automated Initialization of Reconfigurable Silicon-Nitride (SiNx) Filters},
+  author={Yegnanarayanan, Siva S and Maxson, Ryan T and Sorace-Agaskar, Cheryl and Kharas, Dave and Steinbrecher, Gregory and Juodawlkis, Paul W},
+  booktitle={CLEO: Applications and Technology},
+  pages={JTh3D--4},
+  year={2018},
+  organization={Optical Society of America}
+}
+
+@article{lahini2018quantum,
+  title={Quantum logic using correlated one-dimensional quantum walks},
+  author={Lahini, Yoav and Steinbrecher, Gregory R and Bookatz, Adam D and Englund, Dirk},
+  journal={npj Quantum Information},
+  volume={4},
+  number={1},
+  pages={2},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@article{notaros2017programmable,
+  title={Programmable dispersion on a photonic integrated circuit for classical and quantum applications},
+  author={Notaros, Jelena and Mower, Jacob and Heuck, Mikkel and Lupo, Cosmo and Harris, Nicholas C and Steinbrecher, Gregory R and Bunandar, Darius and Baehr-Jones, Tom and Hochberg, Michael and Lloyd, Seth and others},
+  journal={Optics Express},
+  volume={25},
+  number={18},
+  pages={21275--21285},
+  year={2017},
+  publisher={Optical Society of America}
+}
+
+@inproceedings{harris2017programmable,
+  title={Programmable Nanophotonics for Quantum Simulation and Machine Learning},
+  author={Harris, Nicholas C and Shen, Yichen and Steinbrecher, Gregory R and Prabhu, Mihika and Baehr-Jones, Tom and Hochberg, Michael and Soljacic, Marin and Englund, Dirk R},
+  booktitle={Integrated Photonics Research, Silicon and Nanophotonics},
+  pages={ITu3A--3},
+  year={2017},
+  organization={Optical Society of America}
+}
+
+@article{harris2017quantum,
+  title={Quantum transport simulations in a programmable nanophotonic processor},
+  author={Harris, Nicholas C and Steinbrecher, Gregory R and Prabhu, Mihika and Lahini, Yoav and Mower, Jacob and Bunandar, Darius and Chen, Changchen and Wong, Franco NC and Baehr-Jones, Tom and Hochberg, Michael and others},
+  journal={Nature Photonics},
+  volume={11},
+  number={7},
+  pages={447},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@inproceedings{steinbrecher2017optical,
+  title={Optical network switch for dynamically reconfigurable single-and multi-cast topologies},
+  author={Steinbrecher, Gregory R and Rao, Hemonth G and Harris, Nicholas C and Mower, Jacob and Baehr-Jones, Tom and Hochberg, Michael and Chan, Vincent WS and Englund, Dirk R and Hamilton, Scott A},
+  booktitle={Lasers and Electro-Optics (CLEO), 2017 Conference on},
+  pages={1--2},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{lee2016high_article,
+  title={High-rate field demonstration of large-alphabet quantum key distribution},
+  author={Lee, Catherine and Bunandar, Darius and Zhang, Zheshen and Steinbrecher, Gregory R and Dixon, P Ben and Wong, Franco NC and Shapiro, Jeffrey H and Hamilton, Scott A and Englund, Dirk},
+  journal={arXiv preprint arXiv:1611.01139},
+  year={2016}
+}
+
 @article{harris2016large,
   title={Large-scale quantum photonic circuits in silicon},
   author={Harris, Nicholas C and Bunandar, Darius and Pant, Mihir and Steinbrecher, Greg R and Mower, Jacob and Prabhu, Mihika and Baehr-Jones, Tom and Hochberg, Michael and Englund, Dirk},
