--- a/vita.tex
+++ b/vita.tex
@@ -9,12 +9,13 @@
 \begin{document}
 
 \begin{center}
-{\huge \textbf{Gregory R. Steinbrecher}}\\
+{\huge Gregory R. Steinbrecher}\\
+{\large \emph{Curriculum Vitae}}\\
 \vspace{5mm}
 {\normalsize Ph.D. Candidate, Electrical Engineering and Computer Science\\
 Massachusetts Institute of Technology}\\
 \input{contact.tex}
-{\small \href{https://scholar.google.com/citations?user=RPAnJ3cAAAAJ}{\textbf{Link to Profile on Google Scholar}}}\\
+{\small Google Scholar: \href{https://scholar.google.com/citations?user=RPAnJ3cAAAAJ}{\textbf{https://scholar.google.com/citations?user=RPAnJ3cAAAAJ}}}\\
 \vspace{5mm}
 {\small Last Updated \today}\\
 \end{center}
@@ -40,6 +41,14 @@ Advisor: Professor Dirk Englund
 
 \end{itemize}
 
+\subsection{Graudate Fellowships}
+\begin{itemize}
+\item \emph{2017-2019}: Facebook Fellowship
+\item \emph{2013-2017}: National Defense Science and Engineering Graduate Fellowship
+\item \emph{2013-2014}: Irwin Mark Jacobs and Joan Klein Jacobs Presidential Fellowship (declined)
+\item \emph{2011-2013}: VI-A Masters of Engineering Co-Op at MIT Lincoln Laboratory 
+\end{itemize}
+
 \subsection{Relevant Graduate Courses}
 
 \begin{itemize}
@@ -47,6 +56,7 @@ Advisor: Professor Dirk Englund
 \item \textbf{6.262} Discrete Stochastic Processes
 \item \textbf{6.267} Heterogeneous Networks: Architecture, Transport, Proctocols, and Management
 \item \textbf{6.335J/18.336J} Fast Methods for Partial Differential \& Integral Equations
+\item \textbf{6.442} Optical Communications and Networks
 \item \textbf{6.450} Principles of Digital Communication
 \item \textbf{6.453} Quantum Optical Communication
 \item \textbf{6.728} Applied Quantum \& Statistical Physics
@@ -58,16 +68,25 @@ Advisor: Professor Dirk Englund
 \section{Research Papers}
 
 \begin{itemize}
+\item \bibentry{steinbrecher2018quantum}
+\item \bibentry{lahini2018quantum}
+\item \bibentry{notaros2017programmable}
+\item \bibentry{harris2017quantum}
+\item \bibentry{lee2016high_article}
 \item \bibentry{harris2016large}
 \item \bibentry{mower2015high}
 \item \bibentry{harris2015bosonic}
-\item \bibentry{lahini2015quantum}
+%\item \bibentry{lahini2015quantum}
 \item \bibentry{lee2014entanglement}
 \end{itemize}
 
 \section{Conference Papers}
 
 \begin{itemize}
+\item \bibentry{steinbrecher2018hybrid}
+\item \bibentry{yegnanarayanan2018automated}
+\item \bibentry{harris2017programmable}
+\item \bibentry{steinbrecher2017optical}
 \item \bibentry{notaros2016tunable}
 \item \bibentry{lee2016high}
 \item \bibentry{harris2016controlling}
@@ -94,7 +113,7 @@ Professors: Vincent Chan and Robert Gallager
 
 \end{itemize}
 
-%\bibliographystyle{plainnat}
-%\bibliography{pubs}
+% \bibliographystyle{plainnat}
+% \bibliography{pubs}
 
 \end{document}
