--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,12 @@
+@misc{steinbrecher2018apparatus,
+  title={Apparatus, systems, and methods for nonblocking optical switching},
+  author={Steinbrecher, Gregory R and Englund, Dirk Robert},
+  year={2018},
+  month=nov # "~22",
+  publisher={Google Patents},
+  note={US Patent App. 15/982,035}
+}
+
 @article{steinbrecher2018quantum,
   title={Quantum optical neural networks},
   author={Steinbrecher, Gregory R and Olson, Jonathan P and Englund, Dirk and Carolan, Jacques},
@@ -234,4 +243,94 @@
   pages={1--6},
   year={2012},
   organization={IEEE}
+}
+
+@misc{mower2019programmable,
+  title={Programmable photonic processing},
+  author={Mower, Jacob C and Harris, Nicholas C and Englund, Dirk R and Steinbrecher, Greg},
+  year={2019},
+  month=jul # "~23",
+  note={US Patent 10,359,272}
+}
+
+@misc{steinbrecher2020apparatus,
+  title={Apparatus, systems, and methods for nonblocking optical switching},
+  author={Steinbrecher, Gregory R and Englund, Dirk Robert},
+  year={2020},
+  month=apr # "~28",
+  note={US Patent 10,634,851}
+}
+
+@misc{steinbrecher2021apparatus,
+  title={Apparatus, systems, and methods for nonblocking optical switching},
+  author={Steinbrecher, Gregory R and Englund, Dirk Robert},
+  year={2021},
+  month=sep # "~7",
+  note={US Patent 11,112,564}
+}
+
+@misc{carolan2020quantum,
+  title={Quantum Optical Neural Networks},
+  author={Carolan, Jacques Johannes and Steinbrecher, Gregory R and Englund, Dirk Robert},
+  year={2020},
+  month=nov # "~26",
+  note={US Patent App. 16/826,364}
+}
+
+@misc{hasani2020systems,
+  title={Systems and methods for communication system resource contention monitoring},
+  author={Hasani, Naader and Steinbrecher, Gregory R and Schmidtke, Hans-Juergen},
+  year={2020},
+  month=sep @ "~20",
+  note={US Patent 11,451,998},
+}
+
+@article{steinbrecher2019quantum,
+  title={Quantum optical neural networks},
+  author={Steinbrecher, Gregory R and Olson, Jonathan P and Englund, Dirk and Carolan, Jacques},
+  journal={npj Quantum Information},
+  volume={5},
+  number={1},
+  pages={60},
+  year={2019},
+  publisher={Nature Publishing Group UK London}
+}
+
+@inproceedings{steinbrecher2019quantum_1,
+  title={Quantum optical neural networks for next generation quantum information processing},
+  author={Steinbrecher, Gregory and Olson, Jonathan and Englund, Dirk and Carolan, Jacques},
+  booktitle={APS March Meeting Abstracts},
+  volume={2019},
+  pages={E27--012},
+  year={2019}
+}
+
+@inproceedings{steinbrecher2019quantum_2,
+  title={Quantum Photonic Neural Networks},
+  author={Steinbrecher, Gregory R and Olson, Jonathan P and Englund, Dirk and Carolan, Jacques},
+  booktitle={CLEO: QELS\_Fundamental Science},
+  pages={FF1F--2},
+  year={2019},
+  organization={Optica Publishing Group}
+}
+
+@article{lee2019large,
+  title={Large-alphabet encoding for higher-rate quantum key distribution},
+  author={Lee, Catherine and Bunandar, Darius and Zhang, Zheshen and Steinbrecher, Gregory R and Dixon, P Ben and Wong, Franco NC and Shapiro, Jeffrey H and Hamilton, Scott A and Englund, Dirk},
+  journal={Optics express},
+  volume={27},
+  number={13},
+  pages={17539--17549},
+  year={2019},
+  publisher={Optica Publishing Group}
+}
+
+@inproceedings{englund2021large,
+  title={Large-scale photonic circuits for quantum information processing},
+  author={Englund, Dirk and Wan, Noel and Kim, Donggyu and Choi, Hyongrak and Pant, Mihir and Hamerly, Ryan and Carolan, Jacques and Bunandar, Darius and Steinbrecher, Greg and Lu, Tsung-Ju and others},
+  booktitle={Photonics for Quantum 2019},
+  volume={11917},
+  pages={119170Q},
+  year={2021},
+  organization={SPIE}
 }
