--- a/vita.tex
+++ b/vita.tex
@@ -13,10 +13,9 @@
   \vspace{2mm}
 {\large \emph{Curriculum Vitae}}\\
 \vspace{2mm}
-{\normalsize Ph.D. Candidate, Electrical Engineering and Computer Science\\
-Massachusetts Institute of Technology}\\
+% {\normalsize Technical Lead Manager / Research Scientist, Meta Platforms, Inc.}\\
 \input{contact.tex}
-{\small Google Scholar: \href{https://scholar.google.com/citations?user=RPAnJ3cAAAAJ}{\textbf{https://scholar.google.com/citations?user=RPAnJ3cAAAAJ}}}\\
+{\small \emph{Google Scholar:} \href{https://scholar.google.com/citations?user=RPAnJ3cAAAAJ}{{https://scholar.google.com/citations?user=RPAnJ3cAAAAJ}}}\\
 \vspace{5mm}
 {\small Last Updated \today}\\
 \end{center}
@@ -25,58 +24,77 @@ Massachusetts Institute of Technology}\\
 
 \begin{itemize}
 
-\item \textbf{Massachusetts Institute of Technology 2008-2012}\\
-Bachelor of Science, Physics; Bachelor of Science, Electrical Engineering; Mathematics Minor
+\item \textbf{Massachusetts Institute of Technology 2013-2019}\\
+PhD Candidate, Electrical Engineering and Computer Science\\
+Advisor: Professor Dirk Englund
+
+{\small \emph{Thesis: \href{https://dspace.mit.edu/handle/1721.1/122554}{{Programmable photonics for quantum and classical information processing
+}}}}
+
 
 \item \textbf{Massachusetts Institute of Technology 2012-2013}\\
 Master of Engineering in Electrical Engineering and Computer Science\\
 Advisors: Professor Jeffrey Shapiro (MIT) and Dr. Eric Dauler (MIT Lincoln Laboratory)
 
-\vspace{0.5em}
+{\small \emph{Thesis: \href{https://dspace.mit.edu/handle/1721.1/85227}{{Indium Arsenide Quantum Dots for Single Photons in the Communications Band}}}}
 
-{\small \emph{Masters Thesis (link to pdf): \href{http://web.mit.edu/gstein/www/steinbrecher-meng-thesis.pdf}{\textbf{Indium Arsenide Quantum Dots for Single Photons in the Communications Band}}}}
-
-\item \textbf{Massachusetts Institute of Technology 2013-Present}\\
-Ph.D. Candidate, Electrical Engineering and Computer Science\\
-Advisor: Professor Dirk Englund
+\item \textbf{Massachusetts Institute of Technology 2008-2012}\\
+Bachelor of Science, Double Major in Physics and Electrical Engineering; Minor in  Mathematics
 
 \end{itemize}
 
-\subsection{Graudate Fellowships}
+\subsection{Fellowships}
 \begin{itemize}
 \item \emph{2017-2019}: Facebook Fellowship
 \item \emph{2013-2017}: National Defense Science and Engineering Graduate Fellowship
-\item \emph{2013-2014}: Irwin Mark Jacobs and Joan Klein Jacobs Presidential Fellowship (declined)
+\item \emph{2013-2014}: Irwin Mark Jacobs and Joan Klein Jacobs Presidential Fellowship [decl.]
 \item \emph{2011-2013}: VI-A Masters of Engineering Co-Op at MIT Lincoln Laboratory 
 \end{itemize}
 
-\subsection{Relevant Graduate Courses}
+% \subsection{Relevant Graduate Courses}
+
+% \begin{itemize}
+
+% \item \textbf{6.262} Discrete Stochastic Processes
+% \item \textbf{6.267} Heterogeneous Networks: Architecture, Transport, Proctocols, and Management
+% \item \textbf{6.335J/18.336J} Fast Methods for Partial Differential \& Integral Equations
+% \item \textbf{6.442} Optical Communications and Networks
+% \item \textbf{6.450} Principles of Digital Communication
+% \item \textbf{6.453} Quantum Optical Communication
+% \item \textbf{6.728} Applied Quantum \& Statistical Physics
+% \item \textbf{6.840J/18.404J} Theory of Computation 
+% \item \textbf{18.369} Mathematical Methods in Nanophotonics
+
+% \end{itemize}
+
+\section{Patents}
 
 \begin{itemize}
-
-\item \textbf{6.262} Discrete Stochastic Processes
-\item \textbf{6.267} Heterogeneous Networks: Architecture, Transport, Proctocols, and Management
-\item \textbf{6.335J/18.336J} Fast Methods for Partial Differential \& Integral Equations
-\item \textbf{6.442} Optical Communications and Networks
-\item \textbf{6.450} Principles of Digital Communication
-\item \textbf{6.453} Quantum Optical Communication
-\item \textbf{6.728} Applied Quantum \& Statistical Physics
-\item \textbf{6.840J/18.404J} Theory of Computation 
-\item \textbf{18.369} Mathematical Methods in Nanophotonics
-
+\item \bibentry{hasani2020systems}
+\item \bibentry{steinbrecher2021apparatus}
+\item \bibentry{carolan2020quantum}
+\item \bibentry{mower2019programmable}
+\item \bibentry{mower2016methods}
 \end{itemize}
 
-\section{Research Papers}
+\section{Journal Papers}
 
+\subsection{(Co-)First Author}
 \begin{itemize}
-\item \bibentry{steinbrecher2018quantum}
+\item \bibentry{steinbrecher2019quantum}
 \item \bibentry{lahini2018quantum}
+\item \bibentry{mower2015high}
+\end{itemize}
+
+\subsection{Other}
+\begin{itemize}
+\item \bibentry{englund2021large}
+\item \bibentry{lee2019large}
 \item \bibentry{notaros2017programmable}
 \item \bibentry{harris2017quantum}
-\item \bibentry{lee2016high_article}
+% \item \bibentry{lee2016high_article}
 \item \bibentry{harris2016large}
-\item \bibentry{mower2015high}
-\item \bibentry{harris2015bosonic}
+% \item \bibentry{harris2015bosonic}
 %\item \bibentry{lahini2015quantum}
 \item \bibentry{lee2014entanglement}
 \end{itemize}
@@ -84,6 +102,8 @@ Advisor: Professor Dirk Englund
 \section{Conference Papers}
 
 \begin{itemize}
+\item \bibentry{steinbrecher2019quantum_1}
+\item \bibentry{steinbrecher2019quantum_2}
 \item \bibentry{steinbrecher2018hybrid}
 \item \bibentry{yegnanarayanan2018automated}
 \item \bibentry{harris2017programmable}
@@ -99,12 +119,6 @@ Advisor: Professor Dirk Englund
 \item \bibentry{steinbrecher2012cross}
 \end{itemize}
 
-\section{Patents and Patent Applications}
-
-\begin{itemize}
-\item \bibentry{mower2016methods}
-\end{itemize}
-
 \section{Teaching}
 
 \begin{itemize}
@@ -113,8 +127,8 @@ Advisor: Professor Dirk Englund
 Professors: Vincent Chan and Robert Gallager
 
 \end{itemize}
-
-% \bibliographystyle{plainnat}
-% \bibliography{pubs}
+\newpage
+\bibliographystyle{plainnat}
+\bibliography{pubs}
 
 \end{document}
